--- a/task1/style/styles.css
+++ b/task1/style/styles.css
@@ -5,14 +5,11 @@
 header {
   background-color: lightgray;
   height: 100px;
-  width: 100%;
 }
 
 body {
   margin: 0 auto;
   overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
 }
 
 html, body {
@@ -22,17 +19,8 @@ html, body {
 }
 
 main {
-  flex: 1;
-  padding: 20px;
-}
-
-.page-layout {
-  display: flex;
-  align-items: flex-start;
-}
-
-.navigation-bar {
-  text-align:center;
+  display: inline-block;
+  clear: both;
 }
 
 h1 {
@@ -49,10 +37,14 @@ h2 {
   text-align: left;
 }
 
+.navigation-bar {
+  text-align: center;
+}
+
 .logo img{
   box-sizing: border-box;
   width: 140px;
-  height: 70px;  
+  height: 70px;
   padding: 10px;
   object-fit: contain;
   display: block;
@@ -77,7 +69,6 @@ h2 {
 .nav-list .nav-item  a {
   text-decoration: none;
   color:#040303;
-
 }
 
 .nav-list .nav-item:last-child {
@@ -86,50 +77,64 @@ h2 {
 
 .search {
   position: absolute;
-  top: 30px;
-  right: 20px;
-  display: flex;
+  top: 15px;
+  right: 15px;
+  display: inline-block;
   align-items: center;
+  font-size: 0;
+}
+
+.search-input,
+.search-img {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 14px;
 }
 
 .search-input {
   border: none;
   padding: 10px;
   width: 150px;
+  border: none;
+  margin: 0px;
   background-color: #ffffff;
   color: #040303;
 }
 
 .search-img {
-  background-image: url(assets/icon-search.png); 
+  background-image: url(../assets/icon-search.png);
   background-size: 50%;
   background-repeat: no-repeat;
   background-position: center;
   width: 30px;
   height: 35px;
   border: none;
+  margin: 0px;
+  padding: 0px;
   cursor: pointer;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 }
 
 .content {
+  display: inline-block;
+  width: 74%; 
+  vertical-align: top;
+  margin-left: 20px;
   position: relative;
-  float: right;
   padding: 20px;
   height: 1000px;
   margin-top: 0px;
 }
 
 .side-menu {
+  display: inline-block;
+  vertical-align: top;
   width: 20%;
-  float: left;
   padding: 20px;
-  margin-top: 90px;
 }
 
 .left-menu {
   background-color: #f3f3f3;
-  width:280px;
   padding: 10px;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
@@ -147,22 +152,25 @@ h2 {
   border-radius: 8px;
   height: 40px;
   color: white;
-  display: flex;
-  align-items: center; 
-  justify-content: flex-start;
+  line-height: 38px;
+  position:relative;
+  box-sizing: border-box;
+  overflow: hidden ; 
 }
 
 .btn-plus{
-  display: inline-block;
+  float: right;
   background-color: #979694;
   color: rgb(255, 255, 255); 
   border: none;
-  margin-left:120px;
   height: 35px;
+  font-size: 24px;
+  font-weight:lighter;
+  padding: 0 10px;
+  margin-top: 2px;
   border-top-right-radius: 20%;
   border-bottom-right-radius: 20%;
-  font-size: 30px;
-  font-weight:lighter;
+  cursor:pointer
 }
 
 .selected {
@@ -173,6 +181,8 @@ h2 {
   background-color: #f8f8f8;
   border: #f3f3f3 solid 1px;
   width: 200px;
+  border-radius: 10%;
+  margin: 0 10px;
   height: 100px;
   display: block;
   position: relative;
@@ -185,32 +195,37 @@ h2 {
 }
 
 .article {
+  display: inline-block;
+  vertical-align: top;
   margin: 15px;
   padding: 20px;
   background: #f3f3f3;
   text-align: left;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+  box-sizing: border-box;
+  font-size: 16px;
+  overflow: hidden;
+}
+
+.article p {
+  overflow: hidden;
 }
 
 .row {
-  display: flex;
-  gap: 20px;
-}
-
-.row:nth-child(1) article {
-  flex: 1 1 40%;
-}
-
-.row:nth-child(2) article {
-  flex: 1 1 33.33%;
+  font-size: 0;
+  white-space: normal;
 }
 
 .part-2{
-  text-align: left;
+  height: 350px;
+  width: calc(45% - 20px);
+  text-align: justify;
 }
 
 .part-3{
+  height: 450px;
+  width: calc(30% - 20px);
   text-align: justify;
 }
 
@@ -228,40 +243,35 @@ h2 {
 }
 
 .card-img{
-  width: 230px;
-  height: 180px;
-  float:right;
+  width: 190px;
+  height: 160px;
+  float: right;
   margin: -50px 0 0 10px;
 }
 
 .read-more {
   float: right;
   margin-top: 5%;
-
 }
 
 .articles {
-  width: 90%;
   float: center;
   margin-left: 20px;
 }
 
 .footer {
   background-color: #363030;
-  width: 100%;
   position: relative;
   left: 0;
   bottom: 0;
-  width: 100%;
   text-align:center;
   color: white;
 }
 
 .footer-links {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   text-align: center;
-
 }
 
 .nav-list-footer {
