indentation and use of color

--- a/task2/style/_vars.scss
+++ b/task2/style/_vars.scss
@@ -1,4 +1,5 @@
 $background-color: lightgray;
+$background-color-mobile: rgb(170, 170, 170);
 $text-color: black;
 $headings-color: #da762a;
 $white-color: #ffffff;
