--- a/task2/style/index.css
+++ b/task2/style/index.css
@@ -78,7 +78,7 @@ footer {
 .search__input {
   border: none;
   padding: 10px;
-  width: 150px;
+  width: 300px;
   margin: 0px;
   background-color: #ffffff;
   color: black;
@@ -284,6 +284,9 @@ footer {
     position: absolute;
     top: 15px;
     right: 15px;
+  }
+  .search__input {
+    width: 150px;
   }
   .nav__burger {
     display: none;
