--- a/task2/style/index.scss
+++ b/task2/style/index.scss
@@ -35,7 +35,7 @@
 .search__input {
   border: none;
   padding: 10px;
-  width: 150px;
+  width: 300px;
   margin: 0px;
   background-color: vars.$white-color;
   color: vars.$text-color;
@@ -81,6 +81,7 @@
   background-color: vars.$background-color-mobile;
   color: vars.$text-color;
   display: block;
+  
 
   .nav__item {
     padding: 10px 0;
@@ -251,7 +252,9 @@
     top: 15px;
     right: 15px;
   }
-
+  .search__input {
+    width: 150px;
+  }
   .nav__burger {
     display: none;
   }
