--- a/task2/style/index.scss
+++ b/task2/style/index.scss
@@ -171,22 +171,28 @@
   text-align: center;
 }
 
+
 .footer {
   display: block;
   text-align: center;
-  padding-bottom: 40px;
   overflow: hidden;
-  position: relative; 
 }
 
-.footer__nav-list {
-  list-style: none;
+.footer .footer__nav-list:nth-child(1),
+.footer .footer__nav-list:nth-child(2)  {
+  list-style:none;
   display:block;
   position: relative;
   float: left;
   line-height: 2;
   text-align: left;
   margin-right: 100px;
+  width: 200px;
+}
+
+.footer .footer__nav-list:nth-child(3),
+.footer .footer__nav-list:nth-child(4)  {
+  display: none;
 }
 
 .footer__nav-list--title {
@@ -371,7 +377,9 @@
     text-align: center;
   }
 
-  .footer__nav-list{
+  .footer__nav-list,
+  .footer .footer__nav-list:nth-child(3),
+  .footer .footer__nav-list:nth-child(4) {
     list-style:none;
     display:block;
     position: relative;
