--- a/task2/style/index.css
+++ b/task2/style/index.css
@@ -185,8 +185,19 @@ footer {
 .article__img--right {
   width: 160px;
   height: auto;
-  float: right;
   margin: -50px 0 0 10px;
+}
+
+.content__row article:nth-child(odd) .article__img--right {
+  float: right;
+}
+
+.content__row article:nth-child(even) .article__img--right {
+  float: left;
+  margin-right: 10px;
+}
+.content__row article:nth-child(even) h2 {
+  text-align: right;
 }
 
 .article__img--wide {
