--- a/task2/style/index.css
+++ b/task2/style/index.css
@@ -46,6 +46,54 @@ footer {
   color: #ffffff;
 }
 
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: lightgray;
+  height: 100%;
+}
+
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+html body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  display: inline-block;
+  clear: both;
+}
+
+h1 {
+  font-size: 30px;
+  color: black;
+  margin-top: 20px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 20px;
+  color: #da762a;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+footer {
+  background-color: #363030;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: #ffffff;
+}
+
 .nav {
   text-align: center;
 }
@@ -79,7 +127,6 @@ footer {
   border: none;
   padding: 10px;
   width: 300px;
-  margin: 0px;
   background-color: #ffffff;
   color: black;
 }
@@ -92,8 +139,6 @@ footer {
   width: 30px;
   height: 35px;
   border: none;
-  margin: 0px;
-  padding: 0px;
   cursor: pointer;
   background-color: #ffffff;
 }
@@ -118,8 +163,6 @@ footer {
 .nav__list {
   text-align: left;
   list-style: none;
-  padding: 0;
-  margin-top: 0;
   margin-right: 20px;
   background-color: rgb(170, 170, 170);
   color: black;
@@ -135,12 +178,200 @@ footer {
   color: black;
 }
 
-.content {
+@media screen and (min-width: 768px) {
+  .nav__logo img {
+    box-sizing: border-box;
+    margin-left: 0px;
+    display: block;
+  }
+  .nav__list {
+    list-style: none;
+    margin-top: -30px;
+    text-align: center;
+    background-color: lightgray;
+  }
+  .nav__list .nav__item {
+    border-right: 2px solid black;
+    display: inline-block;
+    padding: 0 15px;
+    margin-top: 0px;
+  }
+  .nav__list .nav__item:last-child {
+    border-right: 0;
+  }
+  .search {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+  }
+  .search__input {
+    width: 150px;
+  }
+  .nav__burger {
+    display: none;
+  }
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: lightgray;
+  height: 100%;
+}
+
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+html body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+main {
   display: inline-block;
-  width: 100%;
-  vertical-align: top;
+  clear: both;
+}
+
+h1 {
+  font-size: 30px;
+  color: black;
+  margin-top: 20px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 20px;
+  color: #da762a;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+footer {
+  background-color: #363030;
   position: relative;
-  height: 2200px;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: #ffffff;
+}
+
+.footer {
+  display: block;
+  text-align: center;
+  overflow: hidden;
+}
+
+.footer__nav-list {
+  list-style: none;
+  display: block;
+  position: relative;
+  float: left;
+  line-height: 2;
+  text-align: left;
+  margin-right: 100px;
+  width: 200px;
+}
+
+.footer__nav-list--desktop-only {
+  display: none;
+}
+
+.footer__nav-list--title {
+  font-weight: bold;
+  color: #ffffff;
+  margin-bottom: 10px;
+}
+
+.footer__nav-list a:link,
+.footer__nav-list a:visited {
+  color: lightgray;
+  text-decoration: none;
+}
+
+.footer__rights {
+  margin-top: 100px;
+  position: static;
+  padding-bottom: 40px;
+  text-align: center;
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    display: inline-block;
+    justify-content: center;
+  }
+  .footer__nav-list,
+  .footer__nav-list--desktop-only {
+    list-style: none;
+    display: block;
+    position: relative;
+    float: left;
+    line-height: 2;
+    text-align: left;
+    margin-right: 100px;
+  }
+}
+*, ::after, ::before {
+  box-sizing: border-box;
+}
+
+header {
+  background-color: lightgray;
+  height: 100%;
+}
+
+body {
+  margin: 0 auto;
+  overflow-x: hidden;
+}
+
+html body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+main {
+  display: inline-block;
+  clear: both;
+}
+
+h1 {
+  font-size: 30px;
+  color: black;
+  margin-top: 20px;
+  text-align: center;
+}
+
+h2 {
+  font-size: 20px;
+  color: #da762a;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+footer {
+  background-color: #363030;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: #ffffff;
+}
+
+.article, .content {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.content {
+  width: 100%;
+  position: relative;
+  height: 2400px;
   margin-top: 0px;
 }
 
@@ -149,17 +380,13 @@ footer {
 }
 
 .article {
-  display: inline-block;
-  vertical-align: top;
   margin: 15px;
   padding: 20px;
   background: #f3f3f3;
   text-align: left;
-  border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-  box-sizing: border-box;
-  font-size: 16px;
   overflow: hidden;
+  font-size: 15px;
 }
 .article p {
   overflow: hidden;
@@ -183,21 +410,25 @@ footer {
 }
 
 .article__img--right {
-  width: 160px;
-  height: auto;
+  width: 170px;
+  height: 140PX;
   margin: -50px 0 0 10px;
 }
 
-.content__row article:nth-child(odd) .article__img--right {
+.article--right .article__img--right {
   float: right;
 }
 
-.content__row article:nth-child(even) .article__img--right {
+.article--left .article__img--right {
   float: left;
   margin-right: 10px;
 }
-.content__row article:nth-child(even) h2 {
+.article--left h2 {
   text-align: right;
+}
+
+.article--desktop {
+  display: none;
 }
 
 .article__img--wide {
@@ -221,100 +452,10 @@ footer {
   text-align: center;
 }
 
-.footer {
-  display: block;
-  text-align: center;
-  overflow: hidden;
-}
-
-.footer .footer__nav-list:nth-child(1),
-.footer .footer__nav-list:nth-child(2) {
-  list-style: none;
-  display: block;
-  position: relative;
-  float: left;
-  line-height: 2;
-  text-align: left;
-  margin-right: 100px;
-  width: 200px;
-}
-
-.footer .footer__nav-list:nth-child(3),
-.footer .footer__nav-list:nth-child(4) {
-  display: none;
-}
-
-.footer__nav-list--title {
-  font-weight: bold;
-  color: #ffffff;
-  margin-bottom: 10px;
-}
-
-.footer__nav-list a:link,
-.footer__nav-list a:visited {
-  color: lightgray;
-  text-decoration: none;
-}
-
-.footer__rights {
-  margin-top: 100px;
-  position: static;
-  padding-bottom: 40px;
-  text-align: center;
-}
-
 @media screen and (min-width: 768px) {
-  .nav__logo img {
-    box-sizing: border-box;
-    width: 140px;
-    height: 70px;
-    padding: 10px;
-    margin-left: 0px;
-    -o-object-fit: contain;
-       object-fit: contain;
-    display: block;
-  }
-  .nav__list {
-    list-style: none;
-    padding: 0;
-    margin-top: -30px;
-    text-align: center;
-    background-color: lightgray;
-    color: black;
-  }
-  .nav__list .nav__item {
-    border-right: 2px solid black;
-    display: inline-block;
-    padding: 0 15px;
-    color: black;
-    margin-top: 0px;
-  }
-  .nav__list .nav__item a {
-    text-decoration: none;
-    color: black;
-  }
-  .nav__list .nav__item:last-child {
-    border-right: 0;
-  }
-  .search {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  .search__input {
-    width: 150px;
-  }
-  .nav__burger {
-    display: none;
-  }
-  .logo img {
-    box-sizing: border-box;
-    display: block;
-    left: 15px;
-  }
   .side-menu {
     display: inline-block;
-    vertical-align: top;
+    align-items: top;
     width: 20%;
     padding: 10px;
   }
@@ -341,7 +482,6 @@ footer {
     color: #ffffff;
     line-height: 38px;
     position: relative;
-    box-sizing: border-box;
     overflow: hidden;
   }
   .left-menu__btn {
@@ -377,43 +517,47 @@ footer {
     color: black;
   }
   .content {
-    display: inline-block;
     width: 74%;
     margin-left: 20px;
+    margin-top: 0px;
     padding: 20px;
     height: 1000px;
-    margin-top: 0px;
   }
   .article--part-2 {
     height: 350px;
     width: calc(45% - 20px);
-    text-align: justify;
   }
   .article--part-3 {
     height: 450px;
     width: calc(30% - 20px);
-    text-align: justify;
   }
   .article__img--right {
-    width: 230px;
-    height: auto;
+    width: 170px;
+    height: 140px;
     float: right;
-    margin: -50px 0 0 10px;
   }
-  .footer {
-    display: inline-block;
-    justify-content: center;
-    text-align: center;
+  .article--left .article__img--right {
+    float: right;
   }
-  .footer__nav-list,
-  .footer .footer__nav-list:nth-child(3),
-  .footer .footer__nav-list:nth-child(4) {
-    list-style: none;
-    display: block;
-    position: relative;
-    float: left;
-    line-height: 2;
+  .article--left h2 {
     text-align: left;
-    margin-right: 100px;
+  }
+  .article--mobile {
+    display: none;
+  }
+  .article--desktop {
+    margin: 15px;
+    padding: 20px;
+    background: #f3f3f3;
+    text-align: left;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 15px;
+    text-align: justify;
+  }
+  .article--desktop p {
+    overflow: hidden;
   }
 }/*# sourceMappingURL=index.css.map */
