--- a/task2/style/index.scss
+++ b/task2/style/index.scss
@@ -1,405 +1,5 @@
-@use 'vars';
-@use 'base';
-
-.nav {
-  text-align: center;
-}
-
-.nav__logo {
-  img {
-    display: inline;
-    vertical-align: top;
-    margin-left: 250px;
-    width: 140px;
-    height: 70px;
-    padding: 10px;
-    object-fit: contain;
-  }
-}
-
-  .search {
-  position: relative;
-  margin-bottom: 5px;
-  display: inline-block;
-  align-items: center;
-  font-size: 0;
-
-  .search__input,
-  .search__img {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 14px;
-  }
-}
-
-.search__input {
-  border: none;
-  padding: 10px;
-  width: 300px;
-  margin: 0px;
-  background-color: vars.$white-color;
-  color: vars.$text-color;
-}
-
-.search__img {
-  background-image: url(../assets/icon-search.png);
-  background-size: 50%;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 30px;
-  height: 35px;
-  border: none;
-  margin: 0px;
-  padding: 0px;
-  cursor: pointer;
-  background-color: vars.$white-color;
-}
-
-.nav__burger {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  padding: 10px;
-  border: none;
-  background: none;
-  cursor: pointer;
-
-  img {
-    width: 30px;
-    height: 30px;
-    object-fit: contain;
-    background-color: vars.$background-color;
-  }
-}
-
-.nav__list {
-  text-align: left;
-  list-style: none;
-  padding: 0;
-  margin-top: 0;
-  margin-right: 20px;
-  background-color: vars.$background-color-mobile;
-  color: vars.$text-color;
-  display: block;
-  
-
-  .nav__item {
-    padding: 10px 0;
-    margin-left:5px;
-    color: vars.$text-color;
-
-    a {
-      text-decoration: none;
-      color:vars.$text-color;
-    }
-  }
-
-}
-
-.content {
-  display: inline-block;
-  width: 100%; 
-  vertical-align: top;
-  position: relative;
-  height: 2200px;
-  margin-top: 0px;
-}
-
-.side-menu {
-  display: none;
-}
-
-.article {
-  display: inline-block;
-  vertical-align: top;
-  margin: 15px;
-  padding: 20px;
-  background: vars.$left-menu-background-color;
-  text-align: left;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  box-sizing: border-box;
-  font-size: 16px;
-  overflow: hidden;
-  p {
-    overflow: hidden;
-  }
-}
-
-.content__row {
-  font-size: 0;
-  white-space: normal;
-}
-
-.article--part-2{
-  height: 100%;
-  width:  90%;
-  text-align: justify;
-}
-
-.article--part-3 {
-  height: 450px;
-  width: 90%;
-  text-align: justify;
-}
-
-.article__img--right {
-  width: 160px;
-  height: auto;
-  margin: -50px 0 0 10px;
-}
-
-.content__row article:nth-child(odd) .article__img--right {
-  float: right;
-}
-
-.content__row article:nth-child(even)  {
-  .article__img--right {
-    float: left;
-    margin-right: 10px;
-  }
-  
-  h2 {
-    text-align: right;
-  }
-}
-
-.article__img--wide {
-  width: 100%;
-  height: 170px;
-  display: block;
-  margin: 0 auto;
-}
-
-.article__title {
-  text-align: center;
-  margin-top: -5px;
-}
-
-.article__read-more {
-  float: right;
-  margin-top: 5%;
-}
-
-.content__articles {
-  text-align: center;
-}
-
-
-.footer {
-  display: block;
-  text-align: center;
-  overflow: hidden;
-}
-
-.footer .footer__nav-list:nth-child(1),
-.footer .footer__nav-list:nth-child(2)  {
-  list-style:none;
-  display:block;
-  position: relative;
-  float: left;
-  line-height: 2;
-  text-align: left;
-  margin-right: 100px;
-  width: 200px;
-}
-
-.footer .footer__nav-list:nth-child(3),
-.footer .footer__nav-list:nth-child(4)  {
-  display: none;
-}
-
-.footer__nav-list--title {
-  font-weight: bold;
-  color: vars.$white-color;
-  margin-bottom: 10px;
-}
-
-.footer__nav-list a:link,
-.footer__nav-list a:visited {
-  color: vars.$background-color;  
-  text-decoration: none;
-}
-
-.footer__rights {
-  margin-top: 100px; 
-  position: static;
-  padding-bottom: 40px;
-  text-align: center;
-}
-
-@media screen and (min-width: 768px) {
-  .nav__logo {
-    img {
-      box-sizing: border-box;
-      width: 140px;
-      height: 70px;
-      padding: 10px;
-      margin-left: 0px;
-      object-fit: contain;
-      display: block;
-    }
-  }
-
-  .nav__list {
-    list-style: none;
-    padding: 0;
-    margin-top: -30px;
-    text-align: center;
-    background-color: vars.$background-color;
-    color:vars.$text-color;
-
-    .nav__item {
-      border-right: 2px solid vars.$text-color;
-      display: inline-block;
-      padding: 0 15px;
-      color: vars.$text-color;
-      margin-top: 0px;
-
-      a {
-        text-decoration: none;
-        color:vars.$text-color;
-      }
-    }
-
-    .nav__item:last-child {
-      border-right:0;
-    }
-  }
-
-  .search{
-    position: absolute;
-    top: 15px;
-    right: 15px;
-  }
-  .search__input {
-    width: 150px;
-  }
-  .nav__burger {
-    display: none;
-  }
-
-  .logo img {
-    box-sizing: border-box;
-    display: block;
-    left: 15px;
-  }
-
-  .side-menu {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    padding: 10px;
-  }
-
-  .left-menu {
-    background-color: vars.$left-menu-background-color;
-    border-radius: 8px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    display: inline-block;
-    margin: 25px;
-
-    ul {
-      padding: 10px;
-      margin: 0;
-    }
-  }
-
-  .left-menu__item {
-    background-color: vars.$left-menu-item-color;
-    width: 230px;
-    border: none;
-    cursor: pointer;
-    padding: 1px 20px;
-    margin: 10px;
-    border-radius: 8px;
-    height: 40px;
-    color: vars.$white-color;
-    line-height: 38px;
-    position:relative;
-    box-sizing: border-box;
-    overflow: hidden ;
-  }
-
-  .left-menu__btn{
-    float: right;
-    background-color: vars.$left-menu-item-color;
-    color: vars.$white-color; 
-    border: none;
-    height: 35px;
-    font-size: 24px;
-    font-weight:lighter;
-    padding: 0 10px;
-    margin-top: 2px;
-    border-top-right-radius: 20%;
-    border-bottom-right-radius: 20%;
-    cursor:pointer
-  }
-
-  .item--selected {
-    background-color: vars.$headings-color;
-  }
-
-  .left-menu__item--selected {
-    background-color: vars.$nav-color;
-    border: vars.$left-menu-background-color solid 1px;
-    width: 200px;
-    border-radius: 10%;
-    margin: 0 10px;
-    height: 100px;
-    display: block;
-    position: relative;
-    list-style: none;
-    color: vars.$text-color;
-
-    a {
-      color: vars.$text-color;  
-    }
-  }
-
-  .content {
-    display: inline-block;
-    width: 74%;
-    margin-left: 20px;
-    padding: 20px;
-    height: 1000px;
-    margin-top: 0px;
-  }
-
-  .article--part-2{
-    height: 350px;
-    width:  calc(45% - 20px);
-    text-align: justify;
-  }
-
-  .article--part-3 {
-    height: 450px;
-    width: calc(30% - 20px);
-    text-align: justify;
-  }
-
-  .article__img--right {
-    width: 230px;
-    height: auto;
-    float: right;
-    margin: -50px 0 0 10px;
-  }
-
-  .footer {
-    display: inline-block;
-    justify-content: center;
-    text-align: center;
-  }
-
-  .footer__nav-list,
-  .footer .footer__nav-list:nth-child(3),
-  .footer .footer__nav-list:nth-child(4) {
-    list-style:none;
-    display:block;
-    position: relative;
-    float: left;
-    line-height: 2;
-    text-align: left;
-    margin-right: 100px;
-  }
-}
+@import 'vars';
+@import 'base';
+@import 'nav';
+@import 'footer';
+@import 'layout';
