--- a/task2/style/_layout.scss
+++ b/task2/style/_layout.scss
@@ -7,10 +7,13 @@
   background: vars.$left-menu-background-color;
   text-align: left;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-  overflow: hidden;
 
-  p {
-    overflow: hidden;
+  .article__img--right {
+    display: block;
+    width: 170px;
+    height: 140PX;
+    margin: -50px 0 0 10px;
+    float: right;
   }
 }
 
@@ -23,7 +26,6 @@
   @extend %position;
   width: 100%;
   position: relative;
-  height: 2400px;
   margin-top: 0px;
 }
 
@@ -35,6 +37,17 @@
   @include article();
   @extend %position;
   font-size: 15px;
+}
+
+.article__row {
+  font-size: 0;
+}
+
+.article__body {
+  display: inline-block;
+  vertical-align: top;
+  width: calc(100% - 190px);
+  font-size: 16px;
 }
 
 .content__row {
@@ -49,21 +62,8 @@
 }
 
 .article--part-3 {
-  height: 450px;
   width: 90%;
   text-align: justify;
-}
-
-.article__img--right {
-  width: 170px;
-  height: 140PX;
-  margin: -50px 0 0 10px;
-}
-
-.article--right {
-  .article__img--right {
-    float: right;
-  }
 }
 
 .article--left {
@@ -76,15 +76,25 @@
   }
 }
 
-.article--desktop {
-  display: none;
-}
-
 .article__img--wide {
   width: 100%;
   height: 170px;
   display: block;
   margin: 0 auto;
+}
+.article--text{
+  position: relative;
+}
+
+.article__img--stacked {
+  position: absolute;
+  width: 330px;
+  height: 170px;
+  margin: 10rem 0; 
+}
+
+.article__text {
+  padding-bottom: 60vw;
 }
 
 .article__title {
@@ -179,7 +189,7 @@
     margin-left: 20px;
     margin-top: 0px;
     padding: 20px;
-    height: 1000px;
+    height: 100%;
   }
 
   .article--part-2 {
@@ -192,12 +202,6 @@
     width: calc(30% - 20px);
   }
 
-  .article__img--right {
-    width: 170px;
-    height: 140px;
-    float: right;
-  }
-
   .article--left {
     .article__img--right {
       float: right;
@@ -207,15 +211,25 @@
     }
   }
 
-  .article--mobile {
-    display: none;
-  }
-
-  .article--desktop {
+  .article--text {
     @include article();
     display: inline-block;
     vertical-align: top;
     font-size: 15px;
     text-align: justify;
+    position: static;
+  }
+
+  .article__img--stacked {
+    position: static;
+    width: 100%;
+    height: 170px;
+    display: block;
+    margin: 10px auto;
+  }
+
+  .article__text {
+    display: inline;
+    padding: 0;
   }
 }
