--- a/task2/style/_footer.scss
+++ b/task2/style/_footer.scss
@@ -1,20 +1,14 @@
 @use 'vars';
+@use 'mixins';
 @use 'base';
-
-.footer {
-  display: block;
-  text-align: center;
-  overflow: hidden;
-}
 
 .footer__nav-list {
   list-style: none;
   display: block;
   position: relative;
-  float: left;
   line-height: 2;
   text-align: left;
-  margin-right: 100px;
+  margin-right:30px;
   width: 200px;
 }
 
@@ -37,18 +31,21 @@
 .footer__rights {
   margin-top: 100px;
   padding-bottom: 40px;
+  margin-bottom: -10px;
   text-align: center;
 }
 
-@media screen and (min-width: 1024px) {
+@include screenadjust(1024px) {
   .footer {
-    display: inline-block;
+    text-align: center;
   }
 
   .footer__nav-list,
   .footer__nav-list--desktop-only {
     list-style: none;
-    display: block;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
     position: relative;
     line-height: 2;
     text-align: left;
