--- a/task2/style/_layout.scss
+++ b/task2/style/_layout.scss
@@ -1,27 +1,6 @@
 @use 'vars';
+@use 'mixins';
 @use 'base';
-
-@mixin article {
-  margin: 15px;
-  padding: 20px;
-  background: vars.$left-menu-background-color;
-  text-align: left;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-
-  .article__img--right {
-    display: block;
-    width: 170px;
-    height: 140PX;
-    margin: -50px 0 0 10px;
-    float: right;
-  }
-}
-
-%position {
-  display: inline-block;
-  vertical-align: top;
-}
-
 .content {
   @extend %position;
   width: 100%;
@@ -111,7 +90,7 @@
   text-align: center;
 }
 
-@media screen and (min-width: 1024px) {
+@include screenadjust(1024px) {
 
   .side-menu {
     display: inline-block;
@@ -163,11 +142,11 @@
     cursor:pointer
   }
 
-  .item--selected {
+  .item--opened {
     background-color: vars.$headings-color;
   }
 
-  .left-menu__item--selected {
+  .left-menu__item--opened {
     background-color: vars.$nav-color;
     border: vars.$left-menu-background-color solid 1px;
     width: 200px;
