--- a/task2/style/_nav.scss
+++ b/task2/style/_nav.scss
@@ -1,5 +1,7 @@
 @use 'vars';
+@use 'mixins';
 @use 'base';
+
 
 .nav {
   text-align: center;
@@ -89,7 +91,7 @@
   }
 }
 
-@media screen and (min-width: 1024px) {
+@include screenadjust(1024px) {
   .nav__logo {
     img {
       box-sizing: border-box;
