--- a/task2/style/index.css
+++ b/task2/style/index.css
@@ -1,3 +1,13 @@
+.article, .content {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.article, .content {
+  display: inline-block;
+  vertical-align: top;
+}
+
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -9,7 +19,6 @@ header {
 
 body {
   margin: 0;
-  height: 100%;
   width: auto;
   padding: 0;
 }
@@ -37,7 +46,7 @@ footer {
   position: relative;
   left: 0;
   bottom: 0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
 }
 
@@ -46,6 +55,11 @@ footer {
     margin: 0 auto;
   }
 }
+.article, .content {
+  display: inline-block;
+  vertical-align: top;
+}
+
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -57,7 +71,6 @@ header {
 
 body {
   margin: 0;
-  height: 100%;
   width: auto;
   padding: 0;
 }
@@ -85,7 +98,7 @@ footer {
   position: relative;
   left: 0;
   bottom: 0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
 }
 
@@ -211,6 +224,11 @@ footer {
     display: none;
   }
 }
+.article, .content {
+  display: inline-block;
+  vertical-align: top;
+}
+
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -222,7 +240,6 @@ header {
 
 body {
   margin: 0;
-  height: 100%;
   width: auto;
   padding: 0;
 }
@@ -250,7 +267,7 @@ footer {
   position: relative;
   left: 0;
   bottom: 0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
 }
 
@@ -259,20 +276,13 @@ footer {
     margin: 0 auto;
   }
 }
-.footer {
-  display: block;
-  text-align: center;
-  overflow: hidden;
-}
-
 .footer__nav-list {
   list-style: none;
   display: block;
   position: relative;
-  float: left;
   line-height: 2;
   text-align: left;
-  margin-right: 100px;
+  margin-right: 30px;
   width: 200px;
 }
 
@@ -295,23 +305,31 @@ footer {
 .footer__rights {
   margin-top: 100px;
   padding-bottom: 40px;
+  margin-bottom: -10px;
   text-align: center;
 }
 
 @media screen and (min-width: 1024px) {
   .footer {
-    display: inline-block;
+    text-align: center;
   }
   .footer__nav-list,
   .footer__nav-list--desktop-only {
     list-style: none;
-    display: block;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
     position: relative;
     line-height: 2;
     text-align: left;
     margin-right: 100px;
   }
 }
+.content, .article {
+  display: inline-block;
+  vertical-align: top;
+}
+
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -323,7 +341,6 @@ header {
 
 body {
   margin: 0;
-  height: 100%;
   width: auto;
   padding: 0;
 }
@@ -351,7 +368,7 @@ footer {
   position: relative;
   left: 0;
   bottom: 0;
-  text-align: center;
+  text-align: left;
   color: #ffffff;
 }
 
@@ -360,11 +377,6 @@ footer {
     margin: 0 auto;
   }
 }
-.article, .content {
-  display: inline-block;
-  vertical-align: top;
-}
-
 .content {
   width: 100%;
   position: relative;
@@ -508,10 +520,10 @@ footer {
     border-bottom-right-radius: 20%;
     cursor: pointer;
   }
-  .item--selected {
+  .item--opened {
     background-color: #da762a;
   }
-  .left-menu__item--selected {
+  .left-menu__item--opened {
     background-color: #f8f8f8;
     border: #f3f3f3 solid 1px;
     width: 200px;
@@ -523,7 +535,7 @@ footer {
     list-style: none;
     color: black;
   }
-  .left-menu__item--selected a {
+  .left-menu__item--opened a {
     color: black;
   }
   .content {
