--- a/task2/style/_mixins.scss
+++ b/task2/style/_mixins.scss
@@ -8,11 +8,13 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
   .article__img--right {
-    display: block;
-    width: 170px;
-    height: 140PX;
-    margin: -50px 0 0 10px;
-    float: right;
+    img {
+        display: block;
+        width: 170px;
+        height: 140PX;
+        margin: -50px 0 0 10px;
+        float: right;
+    }
   }
 }
 
