--- a/task2/style/index.css
+++ b/task2/style/index.css
@@ -395,7 +395,7 @@ footer {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-size: 15px;
 }
-.article .article__img--right {
+.article .article__img--right img {
   display: block;
   width: 170px;
   height: 140PX;
@@ -430,7 +430,7 @@ footer {
   text-align: justify;
 }
 
-.article--left .article__img--right {
+.article--left img .article__img--right {
   float: left;
   margin-right: 10px;
 }
@@ -438,7 +438,7 @@ footer {
   text-align: right;
 }
 
-.article__img--wide {
+.article__img--wide img {
   width: 100%;
   height: 170px;
   display: block;
@@ -449,7 +449,7 @@ footer {
   position: relative;
 }
 
-.article__img--stacked {
+.article__img--stacked img {
   position: absolute;
   width: 330px;
   height: 170px;
@@ -553,7 +553,7 @@ footer {
     height: 450px;
     width: calc(30% - 20px);
   }
-  .article--left .article__img--right {
+  .article--left img .article__img--right {
     float: right;
   }
   .article--left h2 {
@@ -571,14 +571,14 @@ footer {
     text-align: justify;
     position: static;
   }
-  .article--text .article__img--right {
+  .article--text .article__img--right img {
     display: block;
     width: 170px;
     height: 140PX;
     margin: -50px 0 0 10px;
     float: right;
   }
-  .article__img--stacked {
+  .article__img--stacked img {
     position: static;
     width: 100%;
     height: 170px;
