--- a/task3/style/_layout.scss
+++ b/task3/style/_layout.scss
@@ -29,6 +29,15 @@
   font-size: 1rem;
 }
 
+  .article__img--left {
+    img {
+        display: block;
+        width: 12rem;
+        height: 9rem;
+        float: left;
+    }
+  }
+
 .article__img--wide {
   img{
     width: 100%;
@@ -82,11 +91,9 @@
     background-color: vars.$headings-color;
   }
 
-  .article--left {
+  .article__img--left {
     img {
-      .article__img--right {
         float: right;
-      }
     }
   }
 
