--- a/task4/style/_mixins.scss
+++ b/task4/style/_mixins.scss
@@ -4,16 +4,12 @@
   margin: 15px;
   padding: 20px;
   background: vars.$left-menu-background-color;
-  text-align: left;
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
   .article__img--right {
     img {
-        display: block;
-        width: 170px;
-        height: 140PX;
-        margin: -50px 0 0 10px;
-        float: right;
+        width: 100%;
+        height: 50%;
     }
   }
 }
