--- a/task4/style/index.css
+++ b/task4/style/index.css
@@ -17,7 +17,6 @@ body {
 .grid-container {
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr;
   grid-template-columns: 1fr;
   grid-template-areas: "header1" "main1" "footer1";
 }
@@ -58,7 +57,6 @@ footer {
   }
   .grid-container {
     grid-template-rows: 60px 1fr 400px;
-    grid-template-columns: 1fr;
     grid-template-areas: "header1" "main1" "footer1";
   }
   main {
@@ -85,7 +83,6 @@ body {
 .grid-container {
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr;
   grid-template-columns: 1fr;
   grid-template-areas: "header1" "main1" "footer1";
 }
@@ -126,7 +123,6 @@ footer {
   }
   .grid-container {
     grid-template-rows: 60px 1fr 400px;
-    grid-template-columns: 1fr;
     grid-template-areas: "header1" "main1" "footer1";
   }
   main {
@@ -270,7 +266,6 @@ body {
 .grid-container {
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr;
   grid-template-columns: 1fr;
   grid-template-areas: "header1" "main1" "footer1";
 }
@@ -311,7 +306,6 @@ footer {
   }
   .grid-container {
     grid-template-rows: 60px 1fr 400px;
-    grid-template-columns: 1fr;
     grid-template-areas: "header1" "main1" "footer1";
   }
   main {
@@ -387,7 +381,6 @@ body {
 .grid-container {
   height: 100vh;
   display: grid;
-  grid-template-rows: 1fr;
   grid-template-columns: 1fr;
   grid-template-areas: "header1" "main1" "footer1";
 }
@@ -428,7 +421,6 @@ footer {
   }
   .grid-container {
     grid-template-rows: 60px 1fr 400px;
-    grid-template-columns: 1fr;
     grid-template-areas: "header1" "main1" "footer1";
   }
   main {
@@ -449,26 +441,15 @@ footer {
   margin: 15px;
   padding: 20px;
   background: #f3f3f3;
-  text-align: left;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-size: 15px;
 }
 .article .article__img--right img {
-  display: block;
-  width: 170px;
-  height: 140PX;
-  margin: -50px 0 0 10px;
-  float: right;
-}
-
-.article__row {
-  font-size: 0;
+  width: 100%;
+  height: 50%;
 }
 
 .article__body {
-  display: inline-block;
-  vertical-align: top;
-  width: calc(100% - 190px);
   font-size: 16px;
 }
 
@@ -480,18 +461,30 @@ footer {
 .article--part-2 {
   width: auto;
   text-align: justify;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  gap: 1rem;
+}
+
+.article__col {
+  grid-column: 1;
+}
+
+.article__img--right {
+  grid-column: 2;
+}
+
+.article--left .article__col {
+  grid-column: 2;
+}
+.article--left .article__img--right {
+  grid-column: 1;
+  grid-row: 1;
 }
 
 .article--part-3 {
   text-align: justify;
-}
-
-.article--left img .article__img--right {
-  float: left;
-  margin-right: 10px;
-}
-.article--left h2 {
-  text-align: right;
 }
 
 .article__img--wide img {
@@ -522,8 +515,8 @@ footer {
 }
 
 .article__read-more {
-  float: right;
-  margin-top: 5%;
+  grid-column: -3/-1;
+  text-align: right;
 }
 
 @media screen and (min-width: 1024px) {
@@ -609,33 +602,26 @@ footer {
   .article--part-2 {
     height: auto;
   }
+  .article--left .article__col {
+    grid-column: 1;
+  }
+  .article--left .article__img--right {
+    grid-column: 2;
+  }
   .article--part-3 {
     height: auto;
-  }
-  .article--left img .article__img--right {
-    float: right;
-  }
-  .article--left h2 {
-    text-align: left;
   }
   .article--text {
     margin: 15px;
     padding: 20px;
     background: #f3f3f3;
-    text-align: left;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-    vertical-align: top;
     font-size: 15px;
     text-align: justify;
-    position: static;
   }
   .article--text .article__img--right img {
-    display: block;
-    width: 170px;
-    height: 140PX;
-    margin: -50px 0 0 10px;
-    float: right;
+    width: 100%;
+    height: 50%;
   }
   .article__img--stacked img {
     position: static;
