--- a/task5/style/_mixins.scss
+++ b/task5/style/_mixins.scss
@@ -8,12 +8,13 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
 
   .article__img--right {
+    flex: 0 0 auto;
+    order: 0;
+    align-self: flex-end;
     img {
-        display: block;
         width: 170px;
         height: 140PX;
-        margin: -50px 0 0 10px;
-        float: right;
+        margin: 0;
     }
   }
 }
