--- a/task5/style/index.css
+++ b/task5/style/index.css
@@ -1,9 +1,9 @@
-.article, .content {
+.article {
   display: inline-block;
   vertical-align: top;
 }
 
-.article, .content {
+.article {
   display: inline-block;
   vertical-align: top;
 }
@@ -24,7 +24,13 @@ body {
 }
 
 main {
-  display: inline-block;
+  padding: 1rem;
+}
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h1 {
@@ -54,8 +60,11 @@ footer {
   body {
     margin: 0 auto;
   }
+  .main-layout {
+    flex-direction: row;
+  }
 }
-.article, .content {
+.article {
   display: inline-block;
   vertical-align: top;
 }
@@ -76,7 +85,13 @@ body {
 }
 
 main {
-  display: inline-block;
+  padding: 1rem;
+}
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h1 {
@@ -105,6 +120,9 @@ footer {
 @media screen and (min-width: 1024px) {
   body {
     margin: 0 auto;
+  }
+  .main-layout {
+    flex-direction: row;
   }
 }
 .nav {
@@ -224,7 +242,7 @@ footer {
     display: none;
   }
 }
-.article, .content {
+.article {
   display: inline-block;
   vertical-align: top;
 }
@@ -245,7 +263,13 @@ body {
 }
 
 main {
-  display: inline-block;
+  padding: 1rem;
+}
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h1 {
@@ -274,6 +298,9 @@ footer {
 @media screen and (min-width: 1024px) {
   body {
     margin: 0 auto;
+  }
+  .main-layout {
+    flex-direction: row;
   }
 }
 .footer__nav-list {
@@ -325,7 +352,7 @@ footer {
     margin-right: 100px;
   }
 }
-.content, .article {
+.article {
   display: inline-block;
   vertical-align: top;
 }
@@ -346,7 +373,13 @@ body {
 }
 
 main {
-  display: inline-block;
+  padding: 1rem;
+}
+
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 h1 {
@@ -376,10 +409,12 @@ footer {
   body {
     margin: 0 auto;
   }
+  .main-layout {
+    flex-direction: row;
+  }
 }
 .content {
   width: 100%;
-  position: relative;
   margin-top: 0px;
 }
 
@@ -395,23 +430,35 @@ footer {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   font-size: 15px;
 }
+.article .article__img--right {
+  flex: 0 0 auto;
+  order: 0;
+  align-self: flex-end;
+}
 .article .article__img--right img {
-  display: block;
   width: 170px;
   height: 140PX;
-  margin: -50px 0 0 10px;
-  float: right;
+  margin: 0;
 }
 
 .article__row {
-  font-size: 0;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .article__body {
-  display: inline-block;
-  vertical-align: top;
-  width: calc(100% - 190px);
-  font-size: 16px;
+  flex: 1;
+  order: 1;
+}
+
+.article_links {
+  flex: 1;
+  order: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
 }
 
 .content__row {
@@ -420,22 +467,34 @@ footer {
 }
 
 .article--part-2 {
-  height: 100%;
-  width: 90%;
-  text-align: justify;
+  flex: 1 1 100%;
 }
 
-.article--part-3 {
-  width: 90%;
-  text-align: justify;
+.card-content {
+  display: flex;
+  flex-direction: column;
+}
+.card-content h2 {
+  flex: 1;
+  order: 1;
+}
+.card-content p {
+  flex: 1;
+  order: 3;
+}
+.card-content .article__img--wide {
+  flex: 1;
+  order: 2;
 }
 
-.article--left img .article__img--right {
-  float: left;
-  margin-right: 10px;
+.article--left .article__body {
+  order: 2;
 }
-.article--left h2 {
-  text-align: right;
+.article--left .article_links {
+  order: 1;
+}
+.article--left .article_links .article__read-more {
+  align-self: flex-start;
 }
 
 .article__img--wide img {
@@ -445,19 +504,17 @@ footer {
   margin: 0 auto;
 }
 
-.article--text {
-  position: relative;
+.article--text h2 {
+  flex: 1;
+  order: 1;
 }
-
-.article__img--stacked img {
-  position: absolute;
-  width: 330px;
-  height: 170px;
-  margin: 10rem 0;
+.article--text p {
+  flex: 1;
+  order: 2;
 }
-
-.article__text {
-  padding-bottom: 60vw;
+.article--text .article__img--wide {
+  flex: 1;
+  order: 3;
 }
 
 .article__title {
@@ -466,20 +523,22 @@ footer {
 }
 
 .article__read-more {
-  float: right;
-  margin-top: 5%;
+  margin-top: auto;
+  align-self: flex-end;
 }
 
 .content__articles {
-  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 @media screen and (min-width: 1024px) {
+  .content__articles {
+    flex-wrap: wrap;
+  }
   .side-menu {
-    display: inline-block;
-    align-items: top;
-    width: 20%;
-    padding: 10px;
+    display: block;
+    flex: 0 0 200px;
   }
   .left-menu {
     background-color: #f3f3f3;
@@ -505,9 +564,14 @@ footer {
     line-height: 38px;
     position: relative;
     overflow: hidden;
+    display: flex;
+    flex-direction: row;
+  }
+  .left-menu__label {
+    flex-grow: 1;
   }
   .left-menu__btn {
-    float: right;
+    align-self: flex-end;
     background-color: #979694;
     color: #ffffff;
     border: none;
@@ -539,10 +603,7 @@ footer {
     color: black;
   }
   .content {
-    width: 74%;
-    margin-left: 20px;
-    margin-top: 0px;
-    padding: 20px;
+    flex: 1;
     height: 100%;
   }
   .article--part-2 {
@@ -553,40 +614,19 @@ footer {
     height: 450px;
     width: calc(30% - 20px);
   }
-  .article--left img .article__img--right {
-    float: right;
+  .article--left .article__body {
+    order: 1;
   }
-  .article--left h2 {
-    text-align: left;
+  .article--left .article_links {
+    order: 2;
   }
-  .article--text {
-    margin: 15px;
-    padding: 20px;
-    background: #f3f3f3;
-    text-align: left;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    display: inline-block;
-    vertical-align: top;
-    font-size: 15px;
-    text-align: justify;
-    position: static;
+  .article--left .article_links .article__read-more {
+    align-self: flex-end;
   }
-  .article--text .article__img--right img {
-    display: block;
-    width: 170px;
-    height: 140PX;
-    margin: -50px 0 0 10px;
-    float: right;
+  .article--text p {
+    order: 3;
   }
-  .article__img--stacked img {
-    position: static;
-    width: 100%;
-    height: 170px;
-    display: block;
-    margin: 10px auto;
-  }
-  .article__text {
-    display: inline;
-    padding: 0;
+  .article--text .article__img--wide {
+    order: 2;
   }
 }/*# sourceMappingURL=index.css.map */
