--- a/task5/style/index.css
+++ b/task5/style/index.css
@@ -1,13 +1,3 @@
-.article {
-  display: inline-block;
-  vertical-align: top;
-}
-
-.article {
-  display: inline-block;
-  vertical-align: top;
-}
-
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -64,11 +54,6 @@ footer {
     flex-direction: row;
   }
 }
-.article {
-  display: inline-block;
-  vertical-align: top;
-}
-
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -242,11 +227,6 @@ footer {
     display: none;
   }
 }
-.article {
-  display: inline-block;
-  vertical-align: top;
-}
-
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -352,11 +332,6 @@ footer {
     margin-right: 100px;
   }
 }
-.article {
-  display: inline-block;
-  vertical-align: top;
-}
-
 *, ::after, ::before {
   box-sizing: border-box;
 }
@@ -612,6 +587,7 @@ footer {
   }
   .content__row {
     flex-direction: row;
+    gap: 0.5rem;
   }
   .article--part-2 {
     min-width: 45%;
